tdf#156647: restore the explicitly set properties after applying defaults

Since commit 63c91b9cb3f73b66a915875721b0efd65b8aebac (sw HTML import: apply
default table autoformat on cells in reqif mode, 2018-08-08), defaults are
applied to imported-from-ReqIF tables. This resets the padding correctly
imported from the markup.

This change saves the previous box item, and restores the non-default line
and distance settings from it after the defaults application.

Change-Id: Ibcd8868875905fa93ab2e0443b2a8900ce1441a4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155410
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>